Ajouter un icône de panier

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 		<header>
 			<h1>TP 1</h1>
 			<section class="panier" data-js-panier>
-				<span class="panier__icon" data-js-panier-bouton>Panier</span>
+				<span class="panier__icon" data-js-panier-bouton></span>
 				<div
 					class="panier__detail panier__detail--ferme"
 					data-js-detail
-				>
-					What
-				</div>
+				></div>
 			</section>
 		</header>
 
