Faire la gestion du filtre actif

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header>
 			<h1>TP 1</h1>
 			<section class="panier" data-js-panier>
-				<span class="panier__icon" data-js-panier-bouton></span>
+				` <span class="panier__icon" data-js-panier-bouton></span>
 				<div
 					class="panier__detail panier__detail--ferme"
 					data-js-detail
