Déclare les propriétés comme privées et ajout le test

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header>
 			<h1>TP 1</h1>
 			<section class="panier" data-js-panier>
-				` <span class="panier__icon" data-js-panier-bouton></span>
+				<span class="panier__icon" data-js-panier-bouton></span>
 				<div
 					class="panier__detail panier__detail--ferme"
 					data-js-detail
@@ -27,13 +27,12 @@
 
 		<main>
 			<section class="modal modal--ferme" data-js-modal>
-				<button class="modal__button">Test</button>
 				<div class="modal__contenu" data-js-modal-contenu></div>
 			</section>
 
 			<section class="flex">
 				<aside class="flex__aside">
-					<ul data-js-control-filtres>
+					<ul data-js-control-librarie>
 						<li data-js-filtre="tous">Tous</li>
 						<li data-js-filtre="nouveaute">Nouveautés</li>
 						<li
