Modifie la structure de fichiers CSS

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 			<h1>TP 1</h1>
 			<section class="panier" data-js-panier>
 				<span class="panier__icon" data-js-panier-bouton></span>
-				<div
-					class="panier__detail panier__detail--ferme"
-					data-js-detail
-				></div>
+				<div class="panier__detail panier__detail--ferme" data-js-detail></div>
 			</section>
 		</header>
 
@@ -68,10 +65,7 @@
 					</ul>
 				</aside>
 
-				<div
-					class="flex__grille flex__grille--3"
-					data-js-control-livres
-				></div>
+				<div class="flex__grille flex__grille--3" data-js-control-livres></div>
 			</section>
 		</main>
 	</body>
