--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 		<title>TP 1</title>
-		<meta
-			name="description"
-			content="TP 1 du cours 582-31F-MA Programmation d'interface Web 2"
-		/>
-		<link rel="stylesheet" href="./assets/styles/styles.css" />
+		<meta name="description" content="TP 1 du cours 582-31F-MA Programmation d'interface Web 2"/>
+		<link rel="stylesheet" href="./assets/styles/styles.css"/>
 
 		<script type="module" src="./assets/scripts/main.js"></script>
 	</head>
@@ -24,6 +21,7 @@
 
 		<main>
 			<section class="modal modal--ferme" data-js-modal>
+				<span class="modal__icon" data-js-modal-bouton></span>
 				<div class="modal__contenu" data-js-modal-contenu></div>
 			</section>
 
@@ -32,36 +30,11 @@
 					<ul data-js-control-librarie>
 						<li data-js-filtre="tous">Tous</li>
 						<li data-js-filtre="nouveaute">Nouveautés</li>
-						<li
-							data-js-filtre="categorie"
-							data-js-categorie="Littérature"
-						>
-							Littérature
-						</li>
-						<li
-							data-js-filtre="categorie"
-							data-js-categorie="Art de vivre"
-						>
-							Art de vivre
-						</li>
-						<li
-							data-js-filtre="categorie"
-							data-js-categorie="BD, Jeunesse, Humour"
-						>
-							BD, Jeunesse, Humour
-						</li>
-						<li
-							data-js-filtre="categorie"
-							data-js-categorie="Culture et société"
-						>
-							Culture et société
-						</li>
-						<li
-							data-js-filtre="categorie"
-							data-js-categorie="Savoir et science"
-						>
-							Savoir et science
-						</li>
+						<li data-js-filtre="categorie" data-js-categorie="Littérature">Littérature</li>
+						<li data-js-filtre="categorie" data-js-categorie="Art de vivre">Art de vivre</li>
+						<li data-js-filtre="categorie" data-js-categorie="BD, Jeunesse, Humour">BD, Jeunesse, Humour</li>
+						<li data-js-filtre="categorie" data-js-categorie="Culture et société">Culture et société</li>
+						<li data-js-filtre="categorie" data-js-categorie="Savoir et science">Savoir et science</li>
 					</ul>
 				</aside>
 
